@@ -20,6 +20,7 @@
 
 package org.interactiverobotics.grocery.rest;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import org.interactiverobotics.grocery.domain.Item;
 import org.interactiverobotics.grocery.domain.Purchase;
 import org.interactiverobotics.grocery.domain.Shop;
@@ -159,6 +160,7 @@ public class PurchaseRestControllerIntegrationTest {
         assertEquals(10, response.getBody().getSize());
     }
 
+    @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
     @Test
     public void testBuyItem() {
 
@@ -172,7 +174,7 @@ public class PurchaseRestControllerIntegrationTest {
 
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(1L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(1L), response.getBody().getQuantity());
     }
 
     @Test
@@ -189,7 +191,7 @@ public class PurchaseRestControllerIntegrationTest {
         assertTrue(response.hasBody());
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(2L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(2L), response.getBody().getQuantity());
     }
 
     @Test
@@ -228,6 +230,7 @@ public class PurchaseRestControllerIntegrationTest {
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
     }
 
+    @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
     @Test
     public void testBuyItemSetPriceForNewPurchase() {
 
@@ -287,7 +290,7 @@ public class PurchaseRestControllerIntegrationTest {
         assertTrue(response.hasBody());
         assertEquals(visit, response.getBody().getVisit());
         assertEquals(item, response.getBody().getItem());
-        assertEquals(new Long(1L), response.getBody().getQuantity());
+        assertEquals(Long.valueOf(1L), response.getBody().getQuantity());
     }
 
     @Test
